feat: 공개방 빠른 참가 구현
